--- a/Makefile.config.example
+++ b/Makefile.config.example
@@ -4,6 +4,9 @@
 # cuDNN acceleration switch (uncomment to build with cuDNN).
 # USE_CUDNN := 1
 
+# NCCL acceleration switch (uncomment to build with NCCL)
+USE_NCCL := 1
+
 # CPU-only switch (uncomment to build without GPU support).
 # CPU_ONLY := 1
 
